k8s-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-java-app-ingress
spec:
  rules:
    - host: my-java-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-java-app-internal-service
                port:
                  number: 8080
